Fine-tunen: Als ik op de gebruiker locatie knop druk dan verdwijnt die en als ik door de kaart swipe dan is die weer te zien

--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -199,6 +199,7 @@
                     </view>
                     <connections>
                         <outlet property="boekEenRitBtn" destination="uTF-E0-1rI" id="xdM-Ue-ML7"/>
+                        <outlet property="centerMapBtn" destination="gZd-Dh-8RA" id="vA8-lC-W5q"/>
                         <outlet property="mapView" destination="6N4-LG-C9Y" id="3UJ-w8-8WT"/>
                     </connections>
                 </viewController>
