Een functie toegevoegd dat eerst naar locaties in de buurt zoekt dan naar locaties verder weg

--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -154,7 +154,7 @@
                                                 <rect key="frame" x="19" y="0.0" width="292" height="20"/>
                                                 <color key="textColor" red="0.66274509803921566" green="0.66274509803921566" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                         <color key="value" red="0.94509803921568625" green="0.93333333333333335" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
